--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,6 +6,8 @@
     <script src="./js/signup.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../css/page.css">
     <link rel="stylesheet" href="../css/signup.css">
+    <script src = "https://code.jquery.com/jquery-3.4.1.min.js" type = "text/javascript"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
 </head>
 <body>
     <div class = "header"> 
