--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,7 +3,6 @@
 <head>
     <title> Sign Up </title>
     <link rel = "icon" href = "../images/favicon.ico" type = "image/x-icon"/>
-    <script src="./js/signup.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../css/page.css">
     <link rel="stylesheet" href="../css/signup.css">
     <script src = "https://code.jquery.com/jquery-3.4.1.min.js" type = "text/javascript"></script>
@@ -31,5 +30,6 @@
         </form>
         <p id="error"></p>
     </div>
+    <script type="text/javascript" src="/js/signup.js"></script>
 </body>
 </html>
