--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -107,7 +107,10 @@
 			if (confirm('Are you sure you want to delete your account?')) {
 				$.post('/deleteAccount/'+username+'/'+userID, function (result) {
 					if (result) {
-						window.location.href = "/login";
+						$.get('/logout', function (result) {
+							if (result)
+								window.location.href = '/login';
+						});
 					}
 				});
 			}
