referral session for errors

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -12,8 +12,8 @@
 	</div>
 	<div class = "login-block">
 		<p class = "login-text">{{error}}</p>
-		<form method = "post" action = "/">
-		<input type= "submit" a href= "/" value="Go Back">
+		<form method = "get" action = "/back">
+		<input type= "submit" a href= "/back" value="Go Back">
 		</form>
 	</div>
 </body>
