--- a/views/metronome.hbs
+++ b/views/metronome.hbs
@@ -18,14 +18,29 @@
 			<li><a href = "/tabs">TABS</a></li>
 			<li><a href = "/metronome"class="active">METRONOME</a></li>
 			<li><div class = "break"></div></li>
-			<li><a href = "/search"><img src = "/images/search16.png"></a></li>
-			<li><a href = "/logout">Logged in as: {{sessionname}}</a></li>
+			<li><a href = "/logout">Logged in as: {{username}}</a></li>
 		</ul>
 	</div>
 	<img class = "metronome" src = "images/metronome.png">
-	<h><div class = "bpm"> BPM: 140 </div></h>
-	<button class="plusbpm">+</button>
-	<button class="minusbpm">-</button>
+	
+	<div class = "tempo-display">
+		<div class = "bpm"> BPM: </div>
+		<div class = "tempo"> 140 </div>
+	</div>
+	<div class = "tempo-settings">
+		<class class="plusbpm">+</class>
+		<class class="minusbpm">-</class>
+	</div>
+	<p class="beats-per-measure">Beats per measure</p>
+	   <div class="measures">
+                <div class="minusbeats">-</div>
+                <div class="beats">4</div>
+                <div class="plusbeats">+</div>
+        </div>
+            
+	<div class="start-stop">START</div>
 
+	<script type = "module" src = "/js/metronome.js"></script>
+	<script type = "module" src = "/js/timer.js"></script>
 </body>
 </html>
